[package]
name = "zubik"
version = "0.1.0"
authors = ["Thomas Faurbye Nielsen <archanium@gmail.com>"]

[dependencies]
rocket = "0.4.0-rc.1"
dotenv = "0.13.0"
serde = "1.0.80"
serde_derive = "1.0.80"

[dependencies.rocket_contrib]
version = "0.4.0-rc.1"
default-features = false
features = ["json"]

[lib]
name = "zubik"
path = "src/zubik/lib.rs"

[[bin]]
name = "server"
path = "src/server.rs"
test = false
doc = false